Fix map z-index

--- a/src/app/pages/bench-location/bench-location.component.css
+++ b/src/app/pages/bench-location/bench-location.component.css
@@ -1,5 +1,6 @@
 #map {
     height: 500px;
     width: 100%;
+    z-index: 1;
   }
   
